# miniblog

./: .gitignore  README.md  gunicorn.conf.py  init_db.py  pyproject.toml  render.yaml  requirements.txt  run.py  wsgi.py
miniblog/: __init__.py  auth.py  blog.py  models.py
miniblog/static/css/: style.css
miniblog/templates/: base.html
miniblog/templates/auth/: login.html
miniblog/templates/blog/: index.html  tag.html
miniblog/templates/blog/admin/: dashboard.html  editor.html
