[tool.poetry]
name = "miniblog"
version = "0.1.0"
description = "Un blog minimaliste"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.3"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.5"
markdown = "^3.4.4"
python-dotenv = "^1.0.0"
werkzeug = "^2.3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
